@@ -1,5 +1,9 @@
 Imager release history.  Older releases can be found in Changes.old
 
+ - getpixel(..., type => "float") and the API i_gpixf() have been
+   broken on paletted images since they were implemented.
+   https://rt.cpan.org/Ticket/Display.html?id=75258
+
 Imager 0.88 - 22 Feb 2012
 ===========
 
